// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`choices > N choices render (text + per-choice observe) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "element": "e-1",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-1",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "element": "e-2",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-6",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-2",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-7",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-8",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "element": "e-3",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-9",
    "kind": "request",
    "method": "ui/observe",
    "params": {
      "element": "e-3",
      "event": "click",
      "once": false,
      "stopPropagation": true,
    },
  },
  {
    "id": "req-10",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Apple",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-11",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-5",
      "name": "text_line",
      "parent": "e-4",
      "style": undefined,
      "type": "div",
    },
  },
  {
    "id": "req-12",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "name": "text_word",
      "parent": "e-5",
      "style": undefined,
      "type": "span",
    },
  },
  {
    "id": "req-13",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "Apple",
      },
      "element": "e-7",
      "name": "text_letter",
      "parent": "e-6",
      "style": {
        "display": null,
        "opacity": "0",
      },
      "type": "span",
    },
  },
  {
    "id": "req-14",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-7",
        },
      ],
    },
  },
  {
    "id": "req-15",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Banana",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-16",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "name": "text_line",
      "parent": "e-8",
      "style": undefined,
      "type": "div",
    },
  },
  {
    "id": "req-17",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-10",
      "name": "text_word",
      "parent": "e-9",
      "style": undefined,
      "type": "span",
    },
  },
  {
    "id": "req-18",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "Banana",
      },
      "element": "e-11",
      "name": "text_letter",
      "parent": "e-10",
      "style": {
        "display": null,
        "opacity": "0",
      },
      "type": "span",
    },
  },
  {
    "id": "req-19",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-11",
        },
      ],
    },
  },
  {
    "id": "req-20",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Cherry",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-21",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-13",
      "name": "text_line",
      "parent": "e-12",
      "style": undefined,
      "type": "div",
    },
  },
  {
    "id": "req-22",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-14",
      "name": "text_word",
      "parent": "e-13",
      "style": undefined,
      "type": "span",
    },
  },
  {
    "id": "req-23",
    "kind": "request",
    "method": "ui/create",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "Cherry",
      },
      "element": "e-15",
      "name": "text_letter",
      "parent": "e-14",
      "style": {
        "display": null,
        "opacity": "0",
      },
      "type": "span",
    },
  },
  {
    "id": "req-24",
    "kind": "request",
    "method": "ui/animate",
    "params": {
      "effects": [
        {
          "animations": [
            {
              "$name": "show",
              "$type": "animation",
              "keyframes": [
                {
                  "opacity": "1",
                },
              ],
              "target": {
                "$name": "self",
                "$type": "layer",
              },
              "timing": {
                "delay": "0s",
                "direction": "normal",
                "duration": "0s",
                "easing": "linear",
                "fill": "both",
                "iterations": 1,
              },
            },
          ],
          "element": "e-15",
        },
      ],
    },
  },
]
`;

exports[`choices > click first choice → clear + advance round-trip > ui-after-click 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-1",
      "style": undefined,
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/destroy",
    "params": {
      "element": "e-2",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-4",
      "style": undefined,
    },
  },
  {
    "id": "req-5",
    "kind": "request",
    "method": "ui/destroy",
    "params": {
      "element": "e-5",
    },
  },
  {
    "id": "req-6",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-7",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-7",
      "style": undefined,
    },
  },
  {
    "id": "req-8",
    "kind": "request",
    "method": "ui/destroy",
    "params": {
      "element": "e-8",
    },
  },
  {
    "id": "req-9",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-10",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-11",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-12",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-13",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-14",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "element": "e-3",
      "style": {
        "pointer_events": "auto",
      },
    },
  },
  {
    "id": "req-15",
    "kind": "request",
    "method": "ui/unobserve",
    "params": {
      "element": "e-3",
      "event": "click",
    },
  },
  {
    "id": "req-16",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-17",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-18",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-19",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-10",
      "style": undefined,
    },
  },
  {
    "id": "req-20",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-11",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-21",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-1",
      "style": undefined,
    },
  },
  {
    "id": "req-22",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-23",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-4",
      "style": undefined,
    },
  },
  {
    "id": "req-24",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-25",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": {
        "text": "",
      },
      "element": "e-7",
      "style": undefined,
    },
  },
  {
    "id": "req-26",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-27",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-11",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-28",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-3",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-29",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-6",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-30",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-9",
      "style": {
        "display": "none",
      },
    },
  },
  {
    "id": "req-31",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "hidden": null,
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-12",
      "style": undefined,
    },
  },
  {
    "id": "req-32",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": undefined,
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-13",
      "style": {
        "opacity": "1",
      },
    },
  },
]
`;
